--- a/views/pages/components/_global-navigation.html
+++ b/views/pages/components/_global-navigation.html
@@ -10,12 +10,163 @@
             </svg>
         </div>
         <div class="ig-search">
-            <span>Search</span>
+           <form>
+               <input type="text" placeholder="Search">
+           </form>
         </div>
         <div class="ig-nav-links justify-content-end collapse navbar-collapse" id="navbarSupportedContent">
             <ul navbar-nav mr-auto>
-                <li><a href="#">Planning</a></li>
-                <li><a href="#">Destinations</a></li>
+                <li>
+                    <a href="#" class="active link-has-menu">Planning</a>
+                    <!--Planning menu-->
+                    <div class="nav-inner-items">
+                        <div class="inner-items-container clearfix row">
+                            <div class="col-md-4">
+                                <h6>FLIGHTS</h6>
+                                <ul>
+                                    <li><a href="#">Book a Flight</a></li>
+                                    <li><a href="#">Interactive Route Map</a></li>
+                                    <li><a href="#">Flight Timetables</a></li>
+                                </ul>
+                                <h6>FLIGHTS</h6>
+                                <ul>
+                                    <li><a href="#">Book a Flight</a></li>
+                                    <li><a href="#">Interactive Route Map</a></li>
+                                    <li><a href="#">Flight Timetables</a></li>
+                                </ul>
+                                <h6>FLIGHTS</h6>
+                                <ul>
+                                    <li><a href="#">Book a Flight</a></li>
+                                    <li><a href="#">Interactive Route Map</a></li>
+                                    <li><a href="#">Flight Timetables</a></li>
+                                    <li><a href="#">Flight Timetables</a></li>
+                                    <li><a href="#">Flight Timetables</a></li>
+                                    <li><a href="#">Flight Timetables</a></li>
+                                    <li><a href="#">Flight Timetables</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                    <h6>FLIGHTS</h6>
+                                    <ul>
+                                        <li><a href="#">Book a Flight</a></li>
+                                        <li><a href="#">Interactive Route Map</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                    </ul>
+                                    <h6>FLIGHTS</h6>
+                                    <ul>
+                                        <li><a href="#">Book a Flight</a></li>
+                                        <li><a href="#">Interactive Route Map</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                    </ul>
+                                    <h6>FLIGHTS</h6>
+                                    <ul>
+                                        <li><a href="#">Book a Flight</a></li>
+                                        <li><a href="#">Interactive Route Map</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-4">
+                                        <h6>FLIGHTS</h6>
+                                        <ul>
+                                            <li><a href="#">Book a Flight</a></li>
+                                            <li><a href="#">Interactive Route Map</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                        </ul>
+                                        <h6>FLIGHTS</h6>
+                                        <ul>
+                                            <li><a href="#">Book a Flight</a></li>
+                                            <li><a href="#">Interactive Route Map</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                        </ul>
+                                        <h6>FLIGHTS</h6>
+                                        <ul>
+                                            <li><a href="#">Book a Flight</a></li>
+                                            <li><a href="#">Interactive Route Map</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                        </ul>
+                                    </div>
+                        </div>
+                    </div>
+                    <!--//Planning menu-->
+                </li>
+                <li><a href="#" class="link-has-menu">Destinations</a>
+                    <!--Destinations menu-->
+                    <div class="nav-inner-items">
+                            <div class="inner-items-container clearfix row">
+                                <div class="col-md-4">
+                                    <h6>FLIGHTS</h6>
+                                    <ul>
+                                        <li><a href="#">Book a Flight</a></li>
+                                        <li><a href="#">Interactive Route Map</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                    </ul>
+                                    <h6>FLIGHTS</h6>
+                                    <ul>
+                                        <li><a href="#">Book a Flight</a></li>
+                                        <li><a href="#">Interactive Route Map</a></li>
+                                        <li><a href="#">Flight Timetables</a></li>
+                                    </ul>
+                                    <h6>FLIGHTS</h6>
+                                    <ul>
+                                        <li><a href="#">Book a Flight</a></li>
+                                        <li><a href="#">Interactive Route Map</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-4">
+                                        <h6>FLIGHTS</h6>
+                                        <ul>
+                                            <li><a href="#">Book a Flight</a></li>
+                                            <li><a href="#">Interactive Route Map</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                        </ul>
+                                        <h6>FLIGHTS</h6>
+                                        <ul>
+                                            <li><a href="#">Book a Flight</a></li>
+                                            <li><a href="#">Interactive Route Map</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                        </ul>
+                                        <h6>FLIGHTS</h6>
+                                        <ul>
+                                            <li><a href="#">Book a Flight</a></li>
+                                            <li><a href="#">Interactive Route Map</a></li>
+                                            <li><a href="#">Flight Timetables</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-4">
+                                            <h6>FLIGHTS</h6>
+                                            <ul>
+                                                <li><a href="#">Book a Flight</a></li>
+                                                <li><a href="#">Interactive Route Map</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                            </ul>
+                                            <h6>FLIGHTS</h6>
+                                            <ul>
+                                                <li><a href="#">Book a Flight</a></li>
+                                                <li><a href="#">Interactive Route Map</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                            </ul>
+                                            <h6>FLIGHTS</h6>
+                                            <ul>
+                                                <li><a href="#">Book a Flight</a></li>
+                                                <li><a href="#">Interactive Route Map</a></li>
+                                                <li><a href="#">Flight Timetables</a></li>
+                                            </ul>
+                                        </div>
+                            </div>
+                        </div>
+                     <!--//Destinations menu-->
+                    </li>
                 <li><a href="#">Bookings</a></li>
                 <li><a href="#">Travel information</a></li>
                 <li><a href="#">Promotions</a></li>
