--- a/fe-source/scss/base/_forms.scss
+++ b/fe-source/scss/base/_forms.scss
@@ -229,6 +229,24 @@ $error-color: $red;
   }
 }
 
+.ig-search{
+      ::-webkit-input-placeholder { /* Chrome */
+        color:$border-line;
+      }
+      :-ms-input-placeholder { /* IE 10+ */
+        color:$border-line;
+      }
+      ::-moz-placeholder { /* Firefox 19+ */
+        color:$border-line;
+      }
+      :-moz-placeholder { /* Firefox 4 - 18 */
+        color:$border-line;
+      }
+}
+
+
+
+
 ::-webkit-input-placeholder { /* Chrome */
       font-weight:400;
     }
