--- a/views/pages/components/_homepage-search-carousel.html
+++ b/views/pages/components/_homepage-search-carousel.html
@@ -3,111 +3,131 @@
         <!--search-->
         <div class="ig-hp-search">
             <div class="ig-hp-search-form">
-                <div class="ig-search-tabs">
-                    <button type="button" class="btn active">Book Flight</button>
-                    <button type="button" class="btn">Check in</button>
-                    <button type="button" class="btn">Flight Status</button>
-                    <button type="button" class="btn">My Booking </button>
-                    <button type="button" class="btn ig-more">:</button>
+                <div class="ig-search-tabs nav" role="tablist">
+                    <button type="button" class="btn active nav-link" data-toggle="tab" href="#home">Book Flight</button>
+                    <button type="button" class="btn nav-link" data-toggle="tab" href="#home1">Check in</button>
+                    <button type="button" class="btn nav-link" data-toggle="tab" href="#home2">Flight Status</button>
+                    <button type="button" class="btn nav-link" data-toggle="tab" href="#home3">My Booking </button>
+                    <button class="btn ig-more">:</button>
                 </div>
-                <form class="ig-form-validation hpFlightSearch">
-                    <div class="hp-search-type">
-                        <span class="custom-radio">
-                            <input type="radio" name="searchType" checked id="bookFlight" class="form-control"> 
-                            <label for="bookFlight">Book Flight</label>
-                        </span>
-                        <span class="custom-radio">
-                            <input type="radio" name="searchType" required id="roundTrip" >
-                            <label for="roundTrip">Round Trip</label>
-                        </span>
-                        <span class="custom-radio">
-                            <input type="radio" name="searchType" required id="multiCity">
-                            <label for="multiCity">Multi City</label>
-                        </span>
-                    </div>
-                    <div class="row cleartrip">
-                        <div class="col-sm-6">
-                            <div class="ig-input-group">
-                                <label class="field-label">From</label>
-                                <input type="text" required placeholder="From" class="form-control hpBookingForm">
+                <div class="hpFlightSearch tab-content clearfix">
+                  <div id="home" class="tab-pane" role="tabpanel" aria-labelledby="nav-home-tab">
+                    <form class="ig-form-validation tab-content">
+                        <div class="hp-search-type">
+                            <span class="custom-radio">
+                                <input type="radio" name="searchType" checked id="bookFlight" class="form-control"> 
+                                <label for="bookFlight">Book Flight</label>
+                            </span>
+                            <span class="custom-radio">
+                                <input type="radio" name="searchType" required id="roundTrip" >
+                                <label for="roundTrip">Round Trip</label>
+                            </span>
+                            <span class="custom-radio">
+                                <input type="radio" name="searchType" required id="multiCity">
+                                <label for="multiCity">Multi City</label>
+                            </span>
+                        </div>
+                        <div class="row cleartrip">
+                            <div class="col-sm-6">
+                                <div class="ig-input-group">
+                                    <label class="field-label">From</label>
+                                    <input type="text" required placeholder="From" class="form-control hpBookingForm">
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                    <div class="ig-input-group">
+                                        <label class="field-label">To</label>
+                                        <input type="text" required placeholder="To" class="form-control hpBookingForm">
+                                    </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
-                                <div class="ig-input-group">
-                                    <label class="field-label">To</label>
-                                    <input type="text" required placeholder="To" class="form-control hpBookingForm">
+                        <div class="row cleartrip">
+                                <div class="col-sm-6">
+                                    <div class="ig-input-group">
+                                        <label class="field-label">Departure</label>
+                                        <input type="text" required placeholder="Departure" class="form-control hpBookingForm">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="ig-input-group">
+                                        <label class="field-label">Return</label>
+                                        <input type="text" required placeholder="Return" class="form-control hpBookingForm">
+                                    </div>
                                 </div>
                         </div>
-                    </div>
-                    <div class="row cleartrip">
-                            <div class="col-sm-6">
-                                <div class="ig-input-group">
-                                    <label class="field-label">Departure</label>
-                                    <input type="text" required placeholder="Departure" class="form-control hpBookingForm">
+                        <div class="row cleartrip">
+                                <div class="col-sm-6">
+                                    <div class="ig-input-group">
+                                        <label class="field-label">Passenger(s) Class</label>
+                                        <input type="text" required placeholder="Passenger(s) Class" class="form-control hpBookingForm">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="ig-input-group">
-                                    <label class="field-label">Return</label>
-                                    <input type="text" required placeholder="Return" class="form-control hpBookingForm">
+                                <div class="col-sm-6">
+                                    <div class="ig-input-group">
+                                        <label class="field-label">Pay In</label>
+                                        <input type="text" required placeholder="Pay In" class="form-control hpBookingForm">
+                                    </div>
                                 </div>
-                            </div>
-                    </div>
-                    <div class="row cleartrip">
-                            <div class="col-sm-6">
-                                <div class="ig-input-group">
-                                    <label class="field-label">Passenger(s) Class</label>
-                                    <input type="text" required placeholder="Passenger(s) Class" class="form-control hpBookingForm">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="ig-input-group">
-                                    <label class="field-label">Pay In</label>
-                                    <input type="text" required placeholder="Pay In" class="form-control hpBookingForm">
-                                </div>
-                            </div>
-                    </div>
-                    <div class="row cleartrip">
-                            <div class="col-sm-6">
-                                <button class="btn btn-transparent ig-special-opt-btn">Special Option Fair</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <button class="btn btn-primary block bold ig-search-btn" type="submit">Search Flight</button>
-                            </div>
                         </div>
-                        <div class="ig-search-extras">
-                            <button class="btn" type="button">Package</button>
-                            <button class="btn" type="button">Group Booking</button>
-                            <button class="btn" type="button">Hotels</button>
-                            <button class="btn" type="button">Car Rental</button>
-                        </div>
-                </form>
+                        <div class="row cleartrip">
+                                <div class="col-sm-6">
+                                    <button class="btn btn-transparent ig-special-opt-btn">Special Option Fair</button>
+                                </div>
+                                <div class="col-sm-6">
+                                    <button class="btn btn-primary block bold ig-search-btn" type="submit">Search Flight</button>
+                                </div>
+                            </div>
+                            <div class="ig-search-extras">
+                                <button class="btn" type="button">Package</button>
+                                <button class="btn" type="button">Group Booking</button>
+                                <button class="btn" type="button">Hotels</button>
+                                <button class="btn" type="button">Car Rental</button>
+                            </div>
+                    </form>
+                    </div>
+                    <div id="home1" class="tab-pane" role="tabpanel" aria-labelledby="nav-home-tab">
+                            sdfsdfsfsdfsdffsdf
+                    </div>
+                    
+                    <div id="home2" class="tab-pane" role="tabpanel" aria-labelledby="nav-home-tab">
+                            sdfsdfsfsdfsdffsdf
+                    </div>
+                    <div id="home3" class="tab-pane" role="tabpanel" aria-labelledby="nav-home-tab">
+                            sdfsdfsfsdfsdffsdf
+                    </div>
+                </div>
+               
             </div>
         </div>
         <!--//search-->
     </div>
 </div>
 <!--home page carousel start-->
+<section>
+<div class="container hp-carousel-btn">
+    <button class="btn hp-carousel-prev">Previous</button> 
+    <button class="btn hp-carousel-next">Next</button> 
+</div>
 <div class="ig-hp-carousel">
     <!--carousel item start-->
     <div class="ig-hp-carousel-item">
         <div class="ig-carousel-image">
             <div class="container carousel-container">
                 <div class="ig-carousel-item-text">
-                        <div class="ig-carousel-title">
-                        Fly Jaipur
-                        </div>
-                        <div class="ig-carousel-desc">
-                        Available for a limited time from
-                        </div>
-                        <div class="ig-carousel-price">
-                        ₹4999
-                        <span>one way*</span>
-                        </div>
-                        <div class="ig-carousel-action">
-                        <button class="btn btn-secondary">Book now</button>
-                        <button class="btn-default btn">Learn more</button>
-                        </div>
+                            <div class="ig-carousel-title">
+                            Fly Jaipur
+                            </div>
+                            <div class="ig-carousel-desc">
+                            Available for a limited time from
+                            </div>
+                            <div class="ig-carousel-price">
+                            ₹4999
+                            <span>one way*</span>
+                            </div>
+                            <div class="ig-carousel-action">
+                            <button class="btn btn-secondary">Book now</button>
+                            <button class="btn-default btn">Learn more</button>
+                            </div>
                     </div>
             </div>
             <picture>
@@ -160,6 +180,7 @@
             
             </div>
         </div>
-        <!--//carousel item start-->
+    </section>
+        <!--//carousel item -->
 </div>
-<!--//home page carousel start-->
+<!--//home page carousel -->
