--- a/fe-source/scss/global.scss
+++ b/fe-source/scss/global.scss
@@ -41,5 +41,5 @@
 @import 'components/global-header-srp';
 @import 'components/global-journeydetails-srp';
 @import 'components/global-srp';
-
+@import 'components/steps-passenger-details';
 
