--- a/views/pages/homepage.html
+++ b/views/pages/homepage.html
@@ -81,8 +81,12 @@
             <% include components/_global-footer.html %>
 
         </div>
-
         
+        <div class="row">
+
+            <% include components/_steps-passenger-details.html %>
+
+        </div>
 
     </div>
 
@@ -99,7 +103,6 @@
         <div class="row">
             <% include components/_global-srp.html %>
         </div>
-
     </div>
    
 </body>
