New Routes Added

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -34,23 +34,22 @@
             <ul>
 
                 <li><a href="/homepage">Home Page</a></li>
-                <li><a href="/homepage">Search Page</a></li>
+                
             </ul>
         </div>
 
         <div class="grid">
             <h3>Search</h3>
             <ul>
-
-                <li><a href="/homepage">Home Page</a></li>
+                <li><a href="/searchresult">Search Page</a></li>
             </ul>
         </div>
 
         <div class="grid" style="border-right:0">
-            <h3>Booking / Checkout Journey</h3>
+            <h3>Funnel Step Pages</h3>
             <ul>
 
-                <li><a href="/homepage">Home Page</a></li>
+                    <li><a href="/steps">Funnel Steps</a></li>
             </ul>
         </div>
 
